# rust-d3

./: .gitignore  CHANGELOG.md  CI.md  CONTRIBUTING.md  Cargo.toml  D3_RUST_AXIS_GAP_ANALYSIS.md  D3_RUST_PARITY_CHECKLIST.md  README.md  debug_scale  debug_scale.rs  justfile  tarpaulin-report.html  test_debug.rs  test_failures_baseline.md  test_padding  test_padding.rs  volcano_contours.geojson
.github/: PIPELINE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.trash/: array_mod.rs.bak
docs/: axis_test_audit.md  selection_parity_audit.md
examples/: aapl_svg_chart.rs  fixture_helpers_demo.rs  integrated_fixture_usage.rs  simple_svg_chart.rs  test_attr_improvements.rs
src/: array.rs  data.rs  format.rs  geojson.rs  lib.rs  main.rs  scales.rs  svg_utils.rs
src/array/: README.md  array.rs  ascending.rs  bisect.rs  bisector.rs  blur.rs  cross.rs  descending.rs  deviation.rs  difference.rs  extent.rs  flat_group.rs  (+35 more)
tests/: README.md  adv_placeholders.rs.bak  array.rs  array_utils.rs  array_utils_fsum_adder.rs  array_utils_scan_least_greatest.rs  axis.rs  axis_linear.rs  binning.rs  bisector.rs  brush.rs  bundle.rs  bundle_adv.rs  chord.rs  chord_adv.rs  cluster.rs  cluster_adv.rs  collection.rs  collection_adv.rs  color.rs  color_adv.rs.bak  color_scale.rs  color_utils.rs  contour.rs  contour_density.rs  curve.rs  curve_adv.rs  curve_adv2.rs  delaunay.rs  demo_fixture_helpers.rs  dispatch.rs  dispatch_adv.rs.bak  drag.rs  drag_adv.rs.bak  dsv.rs  dsv_adv.rs  ease.rs  extent.rs  fetch.rs  fetch_adv.rs.bak  (+72 more)
(+303 files in other folders)
