[package]
name = "rust-d3"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rand = "0.9.1"
rand_distr = "0.5.1"
ureq = "3.0.12"
palette = "0.7.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
csv = "1.3.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
regex = "1"
lazy_static = "1.4"
